cmake_minimum_required(VERSION 3.15)
project(_clionProjectToDoOffline)

set(CMAKE_CXX_STANDARD 20)


add_executable(GraphAdjList "offline_and_reports/Offline-1- Assignment_on_Graph/GraphAdjList.cpp")
add_executable(GraphAdjMatrix "offline_and_reports/Offline-1- Assignment_on_Graph/GraphAdjMatrix.cpp")